tests/vertical-slice/reject/managed_record_or_enum_eq.hew
type Person { name: string }

fn main() {
    let a = Person { name: "ada" };
    let b = Person { name: "ada" };
    let _ = a == b;
}
